--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 arabic-reshaper==3.0.0
+argcomplete==3.6.2
 asgiref==3.8.1
 asn1crypto==1.5.1
+boto3==1.38.32
+botocore==1.38.32
 certifi==2025.4.26
 cffi==1.17.1
 chardet==5.2.0
@@ -12,34 +15,48 @@ cssselect2==0.8.0
 defusedxml==0.7.1
 dj-database-url==3.0.0
 Django==5.2
+django-storages==1.14.6
+git-filter-repo==2.47.0
+gitdb==4.0.12
+gitdb2==4.0.2
+GitPython==3.0.6
 gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
+jmespath==1.0.1
 lxml==5.4.0
 oscrypto==1.3.0
 packaging==25.0
 pillow==11.2.1
+pipx==1.7.1
+platformdirs==4.3.8
 psycopg2-binary==2.9.10
 pycparser==2.22
 pyHanko==0.26.0
 pyhanko-certvalidator==0.26.8
 pypdf==5.4.0
 python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.1.0
 PyYAML==6.0.2
 qrcode==8.1
 reportlab==4.4.0
 requests==2.32.3
+s3transfer==0.13.0
 six==1.17.0
+smmap==5.0.2
 sqlparse==0.5.3
 svglib==1.5.1
 tinycss2==1.4.0
+truffleHog==2.2.1
+truffleHogRegexes==0.0.7
 typing_extensions==4.14.0
 tzdata==2025.2
 tzlocal==5.3.1
 uritools==4.0.3
 urllib3==2.4.0
+userpath==1.9.2
 webencodings==0.5.1
 whitenoise==6.9.0
 xhtml2pdf==0.2.17
-python-decouple
